Added active license
