# app/Filament/SuperAdmin/Resources/Clouds/Pages/ViewCloud.php
@@ -9,11 +9,20 @@ use Filament\Resources\Pages\ViewRecord;
 class ViewCloud extends ViewRecord
 {
     protected static string $resource = CloudResource::class;
+    protected string $view = 'filament.resources.clouds.pages.view-cloud';
+    public $subscriptions;
+    public function mount($record): void
+    {
+        parent::mount($record);
+        $this->subscriptions = $this->getRecord()->user
+            ? $this->getRecord()->user->subscriptions()->get()
+            : collect();
+    }
 
     protected function getHeaderActions(): array
     {
         return [
-            EditAction::make(),
+//            EditAction::make(),
         ];
     }
 }
